<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:keep="@menu/activity_main_drawer">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/menu"
            android:title="@string/list_book" />
        <item
            android:id="@+id/nav_bookmark"
            android:icon="@drawable/bookmark"
            android:title="@string/bookmark" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/heart"
            android:title="@string/favorite" />

        <item
            android:id="@+id/nav_my"
            android:icon="@drawable/mine"
            android:title="@string/my_books" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/log_out" />
    </group>
</menu>
