<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:paddingTop="5dp"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/cardview"
        android:orientation="horizontal"
        android:paddingTop="0.5dp"
        android:paddingBottom="0.5dp"
        android:paddingLeft="0.5dp"
        android:paddingRight="3dp"
        android:weightSum="10"
        tools:ignore="RtlHardcoded,UselessParent">

        <ImageView
            android:id="@+id/img_book"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="3"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:weightSum="10">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top"
                android:hint="@string/book_title"
                android:paddingBottom="2dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:singleLine="true"
                android:textColor="#ff4343"
                android:textSize="20sp"
                android:textStyle="bold|italic"
                tools:ignore="NestedWeights,RtlSymmetry" />

            <TextView
                android:id="@+id/tv_tacgia"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-condensed"
                android:gravity="fill"
                android:hint="@string/unknow_author"
                android:textColorHint="#282828"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="#282828"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="5"
                android:fontFamily="sans-serif-condensed"
                android:gravity="fill"
                android:hint="@string/no_description_available"
                android:lines="3"
                android:textColorHint="#282828"
                android:paddingLeft="10dp"
                android:textColor="#282828"
                android:textSize="13sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>